Projeto/Compilador/tests/cases/ok/Promo_o_v_lida.pas
program T10;
var
  r: real;
begin
  r := 3;
end.
