Projeto/Compilador/tests/cases/error/T6.pas
program T6;
var
  x: integer;
begin
  x[1] := 2;
end.
